DESetup/metadata/objects/Opinion__c.object
<CustomObject>
    <description>All the questions will go to Opinion_Question_c.
Based on the question type, the response text for each question will be in Opinion_response_c.
All the answers will be in Opinion_answers_c.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>short description of what the opinion is about</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sync_to_Mobile_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to have the opinion show up on the mobile app</description>
        <label>Sync to Mobile App</label>
        <type>Checkbox</type>
    </fields>
    <label>Opinion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OP-{0000}</displayFormat>
        <label>Opinion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opinions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>